--- a/index.html
+++ b/index.html
@@ -270,9 +270,10 @@
     </style>
   </head>
   <body>
-    <header class="mdc-top-app-bar">
+    <div class="mdc-top-app-bar">
       <div class="mdc-top-app-bar__row">
         <section
+          style="background-color: #6200ee"
           class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start"
         >
           <button
@@ -282,6 +283,7 @@
           ><span class="mdc-top-app-bar__title">NavBar</span>
         </section>
         <section
+          style="background-color: #6200ee"
           class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end"
         >
           <button
@@ -304,7 +306,7 @@
           </button>
         </section>
       </div>
-    </header>
+    </div>
     <section
       data-bs-version="5.1"
       class="header18 cid-uq3uRAlTSI mbr-fullscreen"
